--- a/estrutura_condicional/index.html
+++ b/estrutura_condicional/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="encadeada.js"></script>
+    <script src="switch.js"></script>
 </body>
 </html>
