--- a/laço/index.html
+++ b/laço/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="lista7.js"></script>
+    <script src="while.js"></script>
 </body>
 </html>
