--- a/DOM/index.html
+++ b/DOM/index.html
@@ -6,11 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <img id="imagem" src="vit.jpg" alt="">
+    <!-- <h1 id="titulo">Titulo Original</h1>
+    <p id="texto">Texto Original</p>
+
+    <button id="botao">Clique aqui</button>
+    <button id="duplo">Clique aqui duas vezes</button>
+    <button id="passe">Passe o mouse</button> -->
+
+    <!-- <img id="imagem" src="jinx1.jpg" alt=""> -->
 
     <ul id="lista"></ul>
-    <button id="adicionar">Adicionar item</button>
-    <button id="remover">Remover item</button>
+    <button id="adicionar">adicionar item</button>
+    <button id="remover">remover item</button>
 
     <script src="dom.js"></script>
 </body>
