--- a/Exercicios/lista14.html
+++ b/Exercicios/lista14.html
@@ -45,6 +45,6 @@
     <button id="redondo">Arredondar!</button>
     <button id="modelar">Deixar quadrado!</button>
 
-    <script src="dom.js"></script>
+    <script src="lista14.js"></script>
 </body>
 </html>
