--- a/numeroSecreto/index.html
+++ b/numeroSecreto/index.html
@@ -10,6 +10,7 @@
     <div class="container">
     <h1>Quantos filhotes tem na cesta?</h1>
     <p>Chute um número de 1 a 100:</p>
+    <p>Você tem 10 chances</p>
     
     <input type="number" id="palpite" min="1" max="100">
     <br>
