--- a/cartao/index.html
+++ b/cartao/index.html
@@ -16,7 +16,6 @@
             <div class="verso"></div>
         </div>
     </div>
-    <br>
     
     <div class="container">
         <div class="cartao natal">
@@ -24,7 +23,6 @@
             <div class="verso2"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao maes">
@@ -32,7 +30,6 @@
             <div class="verso3"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao namorados">
@@ -40,7 +37,6 @@
             <div class="verso4"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao anonovo">
@@ -48,7 +44,6 @@
             <div class="verso5"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao pascoa">
@@ -56,42 +51,36 @@
             <div class="verso6"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao professor">
             <div class="frente7">Feliz Dia do Professor!</div>
-            <div class="verso7">Obrigado por ensinar com dedicação e coração. Feliz Dia do Professor!</div>
+            <div class="verso7"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao desculpas">
             <div class="frente8">Mil Desculpas!</div>
-            <div class="verso8">Sinto muito. Espero poder consertar meu erro com carinho e sinceridade.</div>
+            <div class="verso8"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao motivacional">
             <div class="frente9">Você consegue!</div>
-            <div class="verso9">Você é mais forte do que imagina. Continue acreditando em você!</div>
+            <div class="verso9"></div>
         </div>
     </div>
-    <br>
 
     <div class="container">
         <div class="cartao junina">
             <div class="frente10">Feliz São João!</div>
-            <div class="verso10">Pula fogueira, arraiá e alegria no ar! Viva a Festa Junina!</div>
+            <div class="verso10"></div>
         </div>
     </div>
-    <br>
 
 </div>
-
 <script>
     document.querySelectorAll('.cartao').forEach(cartao => {
         cartao.addEventListener('click', () => {
